# CloudCop

./: .commitlintrc.js  .commitlintrc.json  .env.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  LICENSE  README.md  TEST_COMPLETION_REPORT.md  buf.gen.yaml  package.json
.github/workflows/: ci.yml
backend/: README.md
backend/ai/: Dockerfile  README.md  pyproject.toml
backend/ai/app/: main.py
backend/ai/app/grpc_gen/: __init__.py  summarization_pb2.py  summarization_pb2_grpc.py
backend/ai/app/services/: summarization.py
backend/api/: .golangci.yml  Dockerfile  Makefile  README.md  TESTS_COMPLETED.md  TEST_SUMMARY.md  go.mod  go.sum  gqlgen.yml  sqlc.yaml
backend/api/e2e/: docker-compose.yml  dynamodb_test.go  ec2_test.go  graphql_test.go  iam_test.go  lambda_test.go  s3_test.go  security_service_test.go  setup-misconfigs.sh  setup.go
backend/api/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
backend/worker/: Dockerfile  README.md  go.mod
deploy/: README.md
frontend/: Dockerfile  README.md  components.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/: app-sidebar.tsx  component-example.tsx  page-header.tsx  theme-toggle.tsx
frontend/components/ui/: combobox.tsx  (+10 more)
infra/: README.md  docker-compose.yml  test-integration.sh
infra/cloudformation/: README.md  guard-scan-role.yaml
infra/cloudsentinel-template/: README.md
infra/terraform/: README.md
proto/: summarization.proto
scripts/: bootstrap-vps.sh  rollback.sh  setup-dev.sh
(+74 files in other folders)
